--- a/ModuleA/Thems/DefaultTheme.xaml
+++ b/ModuleA/Thems/DefaultTheme.xaml
@@ -9,6 +9,6 @@
         <Setter Property="FontSize" Value="15"/>
     </Style>
     <Style x:Key="TextStyle" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="Foreground" Value="White"/>
     </Style>
 </ResourceDictionary>
