--- a/City/Views/ShellWindow.xaml
+++ b/City/Views/ShellWindow.xaml
@@ -13,6 +13,8 @@
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
+        MaxHeight="300"
+        MaxWidth="200"
         >
 
     <Border
