--- a/City/Resources/Wallpaper.xaml
+++ b/City/Resources/Wallpaper.xaml
@@ -5,6 +5,7 @@
     <DrawingImage x:Key="BackgroundImage1">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V300 H200 V0 H0 Z">
+                <GeometryDrawing Brush="#FF000000" Geometry="F1 M200,300z M0,0z M0,0L180,0C191.046,0,200,8.95431,200,20L200,300 20,300C8.95431,300,0,291.046,0,280L0,0z" />
                 <GeometryDrawing Brush="#FFFF6D10" Geometry="F1 M200,300z M0,0z M0,0L180,0C191.046,0,200,8.95431,200,20L200,85.4633C123.987,114.316,78.6971,116.685,0,85.4633L0,0z" />
                 <DrawingGroup Transform="1,0,0,1,56,275">
                     <GeometryDrawing Brush="#FFFF6D10">
